tests/snapshots/generate_plan_tests__config_from_environment_variables.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_BUILD_CACHE_DIRS": "/build,barbaz",
    "NIXPACKS_BUILD_CMD": "build",
    "NIXPACKS_INSTALL_CACHE_DIRS": "/tmp,foobar",
    "NIXPACKS_INSTALL_CMD": "install",
    "NIXPACKS_PKGS": "cowsay ripgrep",
    "NIXPACKS_RUN_IMAGE": "alpine",
    "NIXPACKS_START_CMD": "start"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "build"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "install"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "cowsay",
        "ripgrep"
      ],
      "nixpacksArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "start"
  }
}
