tests/snapshots/generate_plan_tests__config_json_file.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "phases": {
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "cowsay"
      ],
      "nixpacksArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "not the start command"
  }
}
