tests/snapshots/generate_plan_tests__crystal.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "version": "[version]",
  "setup": {
    "pkgs": [
      {
        "name": "crystal"
      },
      {
        "name": "shards"
      }
    ],
    "libraries": [],
    "apt_pkgs": [],
    "baseImage": "[baseImage]"
  },
  "install": {
    "cmds": [
      "shards install"
    ]
  },
  "build": {
    "cmds": [
      "shards build --release"
    ]
  },
  "start": {
    "cmd": "./bin/crystal"
  },
  "variables": {
    "NIXPACKS_BUILDER": "crystal"
  },
  "static_assets": {}
}
