tests/snapshots/generate_plan_tests__csharp_api.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "version": "[version]",
  "setup": {
    "pkgs": [
      {
        "name": "dotnet-sdk"
      }
    ],
    "libraries": [],
    "apt_pkgs": [],
    "baseImage": "[baseImage]"
  },
  "install": {
    "cmds": [
      "dotnet restore"
    ]
  },
  "build": {
    "cmds": [
      "dotnet publish --no-restore -c Release -o out"
    ]
  },
  "start": {
    "cmd": "./out/csharp-api"
  },
  "variables": {
    "ASPNETCORE_ENVIRONMENT": "Production",
    "ASPNETCORE_URLS": "http://0.0.0.0:3000",
    "DOTNET_ROOT": "/nix/var/nix/profiles/default/",
    "NIXPACKS_BUILDER": "csharp"
  },
  "static_assets": {}
}
