tests/snapshots/generate_plan_tests__csharp_cli.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "variables": {
    "ASPNETCORE_ENVIRONMENT": "Production",
    "ASPNETCORE_URLS": "http://0.0.0.0:3000",
    "DOTNET_ROOT": "/nix/var/nix/profiles/default/"
  },
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "dotnet-sdk"
        }
      ],
      "nixLibraries": [],
      "aptPackages": []
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "dotnet restore"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "dotnet publish --no-restore -c Release -o out"
      ]
    }
  ],
  "startPhase": {
    "cmd": "./out/csharp-cli"
  }
}
