tests/snapshots/generate_plan_tests__custom_plan_path.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "phases": {},
  "start": {
    "cmd": "correct start command"
  }
}
