tests/snapshots/generate_plan_tests__dart.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "variables": {},
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "dart"
        }
      ],
      "nixLibraries": [],
      "aptPackages": []
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "dart pub get"
      ],
      "onlyIncludeFiles": [
        "pubspec.yaml"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "dart compile exe bin/console_simple.dart"
      ]
    }
  ],
  "startPhase": {
    "cmd": "./bin/console_simple.exe"
  }
}
