tests/snapshots/generate_plan_tests__deno.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "version": "[version]",
  "setup": {
    "pkgs": [
      {
        "name": "deno"
      }
    ],
    "libraries": [],
    "apt_pkgs": [],
    "baseImage": "[baseImage]"
  },
  "install": {},
  "build": {
    "cmds": [
      "deno cache src/index.ts"
    ]
  },
  "start": {
    "cmd": "deno run --allow-all src/index.ts"
  },
  "variables": {
    "NIXPACKS_BUILDER": "deno"
  },
  "static_assets": {}
}
